[tool.poetry]
name = "dope-audio-analysis"
version = "0.1.0"
description = ""
authors = ["Pure-Peace <purepeace_@outlook.com>"]
readme = "README.md"
packages = [{ include = "dope_audio_api" }, { include = "dejavu" }]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
