[tool.poetry]
name = "dejavu"
version = "0.1.3"
description = ""
authors = ["Will Drevo <will.drevo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydub = "^0.25"
PyAudio = "^0.2"
numpy = "^1.23"
scipy = "^1.9"
matplotlib = "^3.6"
mysql-connector-python = "^8.0"
psycopg2 = "^2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
